name:           hasks
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Ni

executable hasks
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   random,
                   time,
                   deepseq
  ghc-options:     -Wall
  other-modules:   RBTree

